--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,7 @@
     <main>
       <!-- Проекты -->
       <section class="portfolio">
+        <h2 class="section-title visually-hidden">Наши работы</h2>
         <div class="container">
           <ul class="filter-buttons">
             <li class="filter-buttons__item">
@@ -195,7 +196,9 @@
               </button>
             </li>
           </ul>
+        </div>
 
+        <div class="container">
           <ul class="portfolio-list">
             <li class="portfolio-list__item">
               <article class="product">
