переделал секции _advantages и cliens через отрицательный margin

--- a/portfolio.html
+++ b/portfolio.html
@@ -840,7 +840,7 @@
     </div>
 
     <!-- Скрипт модельного окна -->
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
