секции comand, hero, work и portfolio сделал отзывчивыми

--- a/index.html
+++ b/index.html
@@ -229,31 +229,76 @@
           <h2 class="section-title">Чем мы зпнимаемся</h2>
           <ul class="classes__card-set">
             <li class="classes__item">
-              <img
-                src="./images/business/box1.jpg"
-                alt="руки на клавиатуре"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/Work/Work1-370_WebP.webp 370w,
+                    ./img/Work/Work1-740_WebP.webp 740w
+                  "
+                  type="image/webp"
+                />
+
+                <img
+                  class="classes__image"
+                  srcset="
+                    ./img/Work/Work1-370.jpg 370w,
+                    ./img/Work/Work1-740.jpg 740w
+                  "
+                  src="./img/Work/Work1-370.jpg"
+                  alt="руки на клавиатуре"
+                  sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw, 100vw"
+                />
+              </picture>
               <div class="classes__category">
                 <p class="classes__category-title">Десктопные приложения</p>
               </div>
             </li>
             <li class="classes__item">
-              <img
-                src="./images/business/box2.jpg"
-                alt="человек с телефоном за ноутбуком"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/Work/Work2-370_WebP.webp 370w,
+                    ./img/Work/Work2-740_WebP.webp 740w
+                  "
+                  type="image/webp"
+                />
+
+                <img
+                  class="classes__image"
+                  srcset="
+                    ./img/Work/Work2-370.jpg 370w,
+                    ./img/Work/Work2-740.jpg 740w
+                  "
+                  src="./img/Work/Work2-370.jpg"
+                  alt="человек с телефоном за ноутбуком"
+                  sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw, 100vw"
+                />
+              </picture>
               <div class="classes__category">
                 <p class="classes__category-title">Мобильные приложения</p>
               </div>
             </li>
             <li class="classes__item">
-              <img
-                src="./images/business/box3.jpg"
-                alt="в руках планшет и стилус"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/Work/Work3-370_WebP.webp 370w,
+                    ./img/Work/Work3-740_WebP.webp 740w
+                  "
+                  type="image/webp"
+                />
+
+                <img
+                  class="classes__image"
+                  srcset="
+                    ./img/Work/Work3-370.jpg 370w,
+                    ./img/Work/Work3-740.jpg 740w
+                  "
+                  src="./img/Work/Work3-370.jpg"
+                  alt="в руках планшет и стилус"
+                  sizes="(min-width: 1200px) 33vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw, 100vw"
+                />
+              </picture>
               <div class="classes__category">
                 <p class="classes__category-title">Дизайнерские решения</p>
               </div>
