--- a/portfolio.html
+++ b/portfolio.html
@@ -101,14 +101,14 @@
         <div class="menu-container" id="menu-container" data-menu>
           <ul class="menu-nav">
             <li class="menu-nav__item">
-              <a
-                href="./index.html"
-                class="menu-nav__link menu-nav__link--current"
-                >Студия</a
-              >
+              <a href="./index.html" class="menu-nav__link">Студия</a>
             </li>
             <li class="menu-nav__item">
-              <a href="./portfolio.html" class="menu-nav__link">Портфолио</a>
+              <a
+                href="./portfolio.html"
+                class="menu-nav__link menu-nav__link--current"
+                >Портфолио</a
+              >
             </li>
             <li class="menu-nav__item">
               <a href="/" class="menu-nav__link">Контакты</a>
@@ -207,12 +207,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio1-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio1-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio1-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio1-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio1-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio1-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio1-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio1-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio1-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio1-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -220,12 +220,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio1-450.jpg 450w,
-                          ./img/Portfolio/Portfolio1-900.jpg 900w,
                           ./img/Portfolio/Portfolio1-354.jpg 354w,
-                          ./img/Portfolio/Portfolio1-708.jpg 708w,
                           ./img/Portfolio/Portfolio1-370.jpg 370w,
-                          ./img/Portfolio/Portfolio1-740.jpg 740w
+                          ./img/Portfolio/Portfolio1-450.jpg 450w,
+                          ./img/Portfolio/Portfolio1-708.jpg 708w,
+                          ./img/Portfolio/Portfolio1-740.jpg 740w,
+                          ./img/Portfolio/Portfolio1-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio1-370.jpg"
                         alt="фотографии людей на экране ноутбука"
@@ -256,12 +256,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio2-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio2-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio2-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio2-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio2-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio2-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio2-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio2-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio2-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio2-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -269,12 +269,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio2-450.jpg 450w,
-                          ./img/Portfolio/Portfolio2-900.jpg 900w,
                           ./img/Portfolio/Portfolio2-354.jpg 354w,
-                          ./img/Portfolio/Portfolio2-708.jpg 708w,
                           ./img/Portfolio/Portfolio2-370.jpg 370w,
-                          ./img/Portfolio/Portfolio2-740.jpg 740w
+                          ./img/Portfolio/Portfolio2-450.jpg 450w,
+                          ./img/Portfolio/Portfolio2-708.jpg 708w,
+                          ./img/Portfolio/Portfolio2-740.jpg 740w,
+                          ./img/Portfolio/Portfolio2-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio2-370.jpg"
                         alt="два баскетболиста"
@@ -307,12 +307,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio3-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio3-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio3-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio3-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio3-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio3-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio3-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio3-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio3-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio3-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -320,12 +320,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio3-450.jpg 450w,
-                          ./img/Portfolio/Portfolio3-900.jpg 900w,
                           ./img/Portfolio/Portfolio3-354.jpg 354w,
-                          ./img/Portfolio/Portfolio3-708.jpg 708w,
                           ./img/Portfolio/Portfolio3-370.jpg 370w,
-                          ./img/Portfolio/Portfolio3-740.jpg 740w
+                          ./img/Portfolio/Portfolio3-450.jpg 450w,
+                          ./img/Portfolio/Portfolio3-708.jpg 708w,
+                          ./img/Portfolio/Portfolio3-740.jpg 740w,
+                          ./img/Portfolio/Portfolio3-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio3-370.jpg"
                         alt="логотип ресторана"
@@ -356,12 +356,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio4-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio4-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio4-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio4-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio4-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio4-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio4-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio4-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio4-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio4-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -369,12 +369,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio4-450.jpg 450w,
-                          ./img/Portfolio/Portfolio4-900.jpg 900w,
                           ./img/Portfolio/Portfolio4-354.jpg 354w,
-                          ./img/Portfolio/Portfolio4-708.jpg 708w,
                           ./img/Portfolio/Portfolio4-370.jpg 370w,
-                          ./img/Portfolio/Portfolio4-740.jpg 740w
+                          ./img/Portfolio/Portfolio4-450.jpg 450w,
+                          ./img/Portfolio/Portfolio4-708.jpg 708w,
+                          ./img/Portfolio/Portfolio4-740.jpg 740w,
+                          ./img/Portfolio/Portfolio4-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio4-370.jpg"
                         alt="наушники"
@@ -405,12 +405,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio5-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio5-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio5-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio5-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio5-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio5-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio5-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio5-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio5-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio5-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -418,12 +418,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio5-450.jpg 450w,
-                          ./img/Portfolio/Portfolio5-900.jpg 900w,
                           ./img/Portfolio/Portfolio5-354.jpg 354w,
-                          ./img/Portfolio/Portfolio5-708.jpg 708w,
                           ./img/Portfolio/Portfolio5-370.jpg 370w,
-                          ./img/Portfolio/Portfolio5-740.jpg 740w
+                          ./img/Portfolio/Portfolio5-450.jpg 450w,
+                          ./img/Portfolio/Portfolio5-708.jpg 708w,
+                          ./img/Portfolio/Portfolio5-740.jpg 740w,
+                          ./img/Portfolio/Portfolio5-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio5-370.jpg"
                         alt="две коробки"
@@ -454,12 +454,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio6-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio6-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio6-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio6-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio6-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio6-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio6-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio6-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio6-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio6-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -467,12 +467,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio6-450.jpg 450w,
-                          ./img/Portfolio/Portfolio6-900.jpg 900w,
                           ./img/Portfolio/Portfolio6-354.jpg 354w,
-                          ./img/Portfolio/Portfolio6-708.jpg 708w,
                           ./img/Portfolio/Portfolio6-370.jpg 370w,
-                          ./img/Portfolio/Portfolio6-740.jpg 740w
+                          ./img/Portfolio/Portfolio6-450.jpg 450w,
+                          ./img/Portfolio/Portfolio6-708.jpg 708w,
+                          ./img/Portfolio/Portfolio6-740.jpg 740w,
+                          ./img/Portfolio/Portfolio6-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio6-370.jpg"
                         alt="монитор компьютера"
@@ -503,12 +503,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio7-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio7-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio7-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio7-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio7-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio7-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio7-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio7-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio7-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio7-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -516,12 +516,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio7-450.jpg 450w,
-                          ./img/Portfolio/Portfolio7-900.jpg 900w,
                           ./img/Portfolio/Portfolio7-354.jpg 354w,
-                          ./img/Portfolio/Portfolio7-708.jpg 708w,
                           ./img/Portfolio/Portfolio7-370.jpg 370w,
-                          ./img/Portfolio/Portfolio7-740.jpg 740w
+                          ./img/Portfolio/Portfolio7-450.jpg 450w,
+                          ./img/Portfolio/Portfolio7-708.jpg 708w,
+                          ./img/Portfolio/Portfolio7-740.jpg 740w,
+                          ./img/Portfolio/Portfolio7-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio7-370.jpg"
                         alt="открытая книга"
@@ -552,12 +552,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio8-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio8-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio8-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio8-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio8-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio8-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio8-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio8-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio8-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio8-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -565,12 +565,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio8-450.jpg 450w,
-                          ./img/Portfolio/Portfolio8-900.jpg 900w,
                           ./img/Portfolio/Portfolio8-354.jpg 354w,
-                          ./img/Portfolio/Portfolio8-708.jpg 708w,
                           ./img/Portfolio/Portfolio8-370.jpg 370w,
-                          ./img/Portfolio/Portfolio8-740.jpg 740w
+                          ./img/Portfolio/Portfolio8-450.jpg 450w,
+                          ./img/Portfolio/Portfolio8-708.jpg 708w,
+                          ./img/Portfolio/Portfolio8-740.jpg 740w,
+                          ./img/Portfolio/Portfolio8-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio8-370.jpg"
                         alt="ярлык на нитке"
@@ -601,12 +601,12 @@
                     <picture>
                       <source
                         srcset="
-                          ./img/Portfolio/Portfolio9-450_WebP.webp 450w,
-                          ./img/Portfolio/Portfolio9-900_WebP.webp 900w,
                           ./img/Portfolio/Portfolio9-354_WebP.webp 354w,
-                          ./img/Portfolio/Portfolio9-708_WebP.webp 708w,
                           ./img/Portfolio/Portfolio9-370_WebP.webp 370w,
-                          ./img/Portfolio/Portfolio9-740_WebP.webp 740w
+                          ./img/Portfolio/Portfolio9-450_WebP.webp 450w,
+                          ./img/Portfolio/Portfolio9-708_WebP.webp 708w,
+                          ./img/Portfolio/Portfolio9-740_WebP.webp 740w,
+                          ./img/Portfolio/Portfolio9-900_WebP.webp 900w
                         "
                         type="image/webp"
                       />
@@ -614,12 +614,12 @@
                       <img
                         class="product__image"
                         srcset="
-                          ./img/Portfolio/Portfolio9-450.jpg 450w,
-                          ./img/Portfolio/Portfolio9-900.jpg 900w,
                           ./img/Portfolio/Portfolio9-354.jpg 354w,
-                          ./img/Portfolio/Portfolio9-708.jpg 708w,
                           ./img/Portfolio/Portfolio9-370.jpg 370w,
-                          ./img/Portfolio/Portfolio9-740.jpg 740w
+                          ./img/Portfolio/Portfolio9-450.jpg 450w,
+                          ./img/Portfolio/Portfolio9-708.jpg 708w,
+                          ./img/Portfolio/Portfolio9-740.jpg 740w,
+                          ./img/Portfolio/Portfolio9-900.jpg 900w
                         "
                         src="./img/Portfolio/Portfolio9-370.jpg"
                         alt="человек работющий за ноутбуком"
